[package]
name = "multicats"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
getifaddrs = "0.6.0"
ipnet = "2.11.0"
log = "0.4.28"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
socket2 = "0.6.1"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "time"] }
tokio-util = "0.7.16"
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash3_64"] }
